test/examples/analyzer/invalid/001_duplicate_method.spell
# Duplicate method "main"

main () = pass

main () = pass